exp slider working

--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -12,6 +12,7 @@
 <link rel="import" href="../paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../neon-animation/neon-animation.html">
+<link rel="import" href="../paper-slider/paper-slider.html">
 
 <dom-module name="orov-input-configurator">
 
@@ -67,6 +68,10 @@
         }
         #stickyHeader {
             background-color: white;
+        }
+
+        #expRateSlider {
+
         }
 
         .green-button {
@@ -299,6 +304,9 @@
             <paper-item>
                 <paper-checkbox id="exponentialSticksCheckbox" checked="{{extraOptions.rovPilot.exponentialSticks}}" on-click="handleEnableExponentialSticks">{{__('Enable Exponential Sticks')}}</paper-checkbox>
             </paper-item>
+            <div id="expRateSliderContainer">
+                <paper-slider disabled="{{!extraOptions.rovPilot.exponentialSticks}}" id="expRateSlider" min="0" max="10" pin value="{{exponentialRate.current}}"></paper-slider>
+            </div>
             <div class="buttons">
                 <paper-button disabled$={{isValidGamepadReplacement}} on-tap="openClearGamepadDuplicateWarning">{{__('Clear conflicting binding')}}</paper-button>
                 <paper-button on-tap="handleClearGamepadBinding" dialog-confirm>{{__('Clear')}}</paper-button>
@@ -575,6 +583,23 @@
                         type: Map
                     },
 
+                    exponentialRate: {
+                        type: Object,
+                        value: {
+                            current: {
+                                type: Number,
+                                value: 0
+                            },
+                            previous: {
+                                type: Number,
+                                value: 0
+                            }
+                        }
+                    },
+                    previousExpRate: {
+                        type: Number,
+                        value: undefined
+                    },
                     presetArray: {
                         type: Array,
                         value: []
@@ -611,7 +636,8 @@
                 behaviors: [namespace('behaviors').oROVStandard],
 
                 listeners: {
-                    'tableContainer.scroll': 'tableContainerScroll'
+                    'tableContainer.scroll': 'tableContainerScroll',
+                    'expRateSlider.value-change': 'expRateSliderHandler'
                 },
 
 
@@ -650,6 +676,16 @@
                         if(self.settings.extraOptions !== undefined)
                         {
                             self.set("extraOptions", self.settings.extraOptions);
+                            if(self.settings.extraOptions.rovPilot.exponentialRate == self.exponentialRate.previous)
+                            {
+                                //Don't do nothing
+                            }
+                            else
+                            {
+                                self.set("exponentialRate.current", self.settings.extraOptions.rovPilot.exponentialRate);
+                                self.set("exponentialRate.previous", self.settings.extraOptions.rovPilot.exponentialRate);
+                            }
+
                         }
                     }.bind(this);
 
@@ -688,6 +724,22 @@
                         });
                     }
                     
+                },
+
+                expRateSliderHandler: function(e) {
+                    var self = this;
+                    
+                    var sliderValue = self.$.expRateSlider.value;
+                    //Save this setting
+                    if(self.settings !== undefined)
+                    {
+                        self.extraOptions.rovPilot.exponentialRate = sliderValue;
+                        self.settings.extraOptions = self.extraOptions;
+
+                        self.eventEmitter.rov.emit('plugin.settings-manager.saveSettings', {inputConfigurator: self.settings});
+                        self.$.updatedExtraOptionsToast.open();
+                    }
+
                 },
                 copyPreset: function(presetIn)
                 {
