Easier to see thumbstick axis when debugging in mock

--- a/src/plugins/mobile-ui/public/webcomponents/dual-thumbstick/dual-thumbstick.html
+++ b/src/plugins/mobile-ui/public/webcomponents/dual-thumbstick/dual-thumbstick.html
@@ -71,8 +71,8 @@
 					canvas._ctx = canvas.getContext('2d');
 
 					// Set up trackpad parameters
-					this._leftTrack.axisColor = "white";
-					this._rightTrack.axisColor = "white";
+					this._leftTrack.axisColor = "#f7f8f8";
+					this._rightTrack.axisColor = "#f7f8f8";
 					this._rightTrack.hasXAxis = false;
 					this.resetCanvas=this.resetCanvas.bind(this);
 				},
