--- a/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/settings-menu/settings-menu.html
@@ -64,6 +64,7 @@
 				<grid-menu-button toggles id="heading" action="callback" target="toggleHeading" icon="maps:navigation" label="Heading"></grid-menu-button>
 				<grid-menu-button toggles id="depth" action="callback" target="toggleDepth" icon="icons:swap-vert" label="Depth"></grid-menu-button>
 				<grid-menu-button id="power" action="callback" target="incPower" icon="device:signal-cellular-1-bar" label="M.Power"></grid-menu-button>
+				<grid-menu-button id="compassMode" action="callback" target="compassMode" icon="av:av-timer" label="Comp/Gyro"></grid-menu-button>
 		</grid-menu>
 
 	</template>
@@ -243,8 +244,10 @@
 						this.powerLevel=1;
 					}
 					this.eventEmitter.emit('plugin.rovpilot.setPowerLevel',this.powerLevel);
-				}
-				,
+				},
+				compassMode: function(e){
+					alert("The compass needs to signal the hardware to change modes")
+				},
 
 				changeToDesktopUI: function( e )
 				{
