--- a/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
@@ -67,6 +67,11 @@
       max-width: 480px;
 
 		}
+    .subcontainer
+    {
+      min-height: 80px;
+      max-height: 600px;
+    }
 
 		grid-menu-button:hover
 		{
@@ -77,7 +82,7 @@
     <paper-icon-button id="trigger" on-tap="_handleToggleMenu" icon="icons:apps"></paper-icon-button>
     <paper-dialog id="gm" class="container" horizontal-align="auto" entry-animation="scale-up-animation"
               exit-animation="scale-down-animation">
-    <paper-dialog-scrollable>
+    <paper-dialog-scrollable class="subcontainer">
       <div id="container">
       <template is="dom-repeat" items="{{applets}}">
       <a on-tap="handleMenuSelection" action="page-change" target="{{item.name}}" class="grid-menu-button">
@@ -102,8 +107,6 @@
   Polymer({
     is:'orov-appletswitcher',
     properties: {
-      showSelection: {type: Boolean, value: true},
-      horizontalOffset: {type: Number}
     },
     listeners:
     {
