cleaned up with changes

--- a/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
+++ b/src/system-plugins/ui-manager/public/webcomponents/orov-appletswitcher.html
@@ -29,6 +29,7 @@
 			text-align: center;
       flex-basis: auto;
       flex-grow: 1;
+      cursor: pointer;
   }
 
   .grid-menu-button[selected]
